--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.65.1",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.8",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
