--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "axios": "^0.21.4",
     "react": "17.0.2",
     "react-native": "0.65.1",
